fix: adjust z-index values across the project for consistent layering

--- a/src/Layout/Header/Header.module.scss
+++ b/src/Layout/Header/Header.module.scss
@@ -2,7 +2,7 @@
 
 .header {
   position: sticky;
-  z-index: 99;
+  z-index: 20;
   top: -96px;
   background: $accent-white;
 
@@ -47,7 +47,7 @@
 
     .bottom {
       position: sticky;
-      z-index: 99;
+      z-index: 20;
       top: 0;
 
       display: flex;
