--- a/src/components/CartNotification/CartNotification.module.scss
+++ b/src/components/CartNotification/CartNotification.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   position: absolute;
-  z-index: 100;
+  z-index: 50;
   top: 0;
   right: 100px;
   transform: translateY(50%);
