--- a/src/components/Portal/Portal.module.scss
+++ b/src/components/Portal/Portal.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper {
   position: fixed;
-  z-index: 99;
+  z-index: 30;
   top: 0;
   left: 0;
 
