--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -175,7 +175,7 @@
       .transparent {
         .wrapper {
           position: absolute;
-          z-index: 99999;
+          z-index: 5;
           top: 0;
           left: -8px;
 
@@ -212,7 +212,7 @@
       .transparent {
         .wrapper {
           position: absolute;
-          z-index: 99999;
+          z-index: 5;
           top: 0;
           left: -8px;
 
