--- a/src/components/ui-components/Dropdown/DropDown.module.scss
+++ b/src/components/ui-components/Dropdown/DropDown.module.scss
@@ -50,7 +50,7 @@
 
 .dropdown-container {
   position: absolute;
-  z-index: 1000;
+  z-index: 50;
   overflow: hidden;
   transition: opacity 0.35s ease-out;
 
