--- a/src/components/ui-components/Input/Input.module.scss
+++ b/src/components/ui-components/Input/Input.module.scss
@@ -128,7 +128,6 @@
 
     .button {
       position: absolute;
-      z-index: 99;
       top: 0.75rem;
       right: 1rem;
 
